--- a/assets/css/custom-product.css
+++ b/assets/css/custom-product.css
@@ -18,3 +18,6 @@
 	color:#926148 !important;
 	font-weight: bold !important;
 }
+.owl-carousel .owl-wrapper-outer.autoHeight{
+	height: auto !important;
+}
