--- a/assets/css/custom-product.css
+++ b/assets/css/custom-product.css
@@ -55,3 +55,11 @@
 .choose-size-tab{
 	margin-top: 5%;
 }
+.info-product-icon{
+	color: red;
+	font-size: 10px !important;
+	
+}
+.info-product{
+	font-size: 10px
+}
