--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,6 @@
 .best-deals ul li h4{
 	line-height: normal;
+ 	line-height: normal;
 }
 
 .slide4-text-custom-1{
@@ -23,6 +24,7 @@
 }
 
 .slide-heading-1{
+	font-family: Raleway;
 	font-weight:bold;
 	font-size:35px;
 	/*font-size:240%;*/
@@ -30,7 +32,8 @@
 }
 
 .slide-content-1{
-
+	font-size: 16px !important;
+	font-family: Raleway;
 }
 
 .slide-button-1 {
@@ -45,7 +48,7 @@
 		font-size:30px;
 	}
 	.slide-content-1{
-		font-size: 12px !important;
+		font-size: 16px !important;
 	}
 }
 
@@ -57,7 +60,7 @@
 	}*/
 
 	.slide-content-1{
-		font-size: 10px !important;
+		font-size: 16px !important;
 	}
 
 	/*.slide-button-1 > a{
@@ -73,11 +76,11 @@
 	}*/
 
 	.slide-content-1{
-		font-size: 8px !important;
+		font-size: 16px !important;
 	}
 
 	.slide-button-1 > a{
-		font-size: 13px;
+		font-size: 14px;
 		padding: 8px 12px;		
 	}
 }
@@ -88,7 +91,7 @@
 	}
 
 	.slide-content-1{
-		font-size: 6px !important;
+		font-size: 15px !important;
 	}
 
 	.slide-button-1 > a{
@@ -96,26 +99,14 @@
 		padding: 6px 10px;		
 	}
 }
+
 @media screen and (max-width: 525px) {
 	.slide-heading-1{
 		/*font-size:100%;*/
 	}
 
 	.slide-content-1{
-		font-size: 4px !important;
-	}
-
-	/*.slide-button-1 > a{
-		
-	}*/
-}
-@media screen and (max-width: 525px) {
-	.slide-heading-1{
-		/*font-size:100%;*/
-	}
-
-	.slide-content-1{
-		font-size: 4px !important;
+		font-size: 8px !important;
 	}
 
 	.slide-button-1 > a{
