--- a/assets/css/custom-header.css
+++ b/assets/css/custom-header.css
@@ -182,3 +182,12 @@ font-weight: 100;
 .fb-like-box{
 	background-color: #fff;
 }
+#inner-head > .fb-like-box{
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: transparent;
+}
+#inner-head > .fb-like-box > body{
+	color: #fff;
+}
